[gd_scene format=3 uid="uid://bd4r7gwb72wxi"]

[ext_resource type="PackedScene" uid="uid://ckft8neuknrwk" path="res://test_scenes/victorious_lucian_splash/default_scene.tscn" id="1_jk7we"]
[ext_resource type="Texture2D" uid="uid://bbiiq6hyvyind" path="res://test_scenes/victorious_lucian_splash/screenshot_OpenBrush_victorious_lucial_splash.webp" id="2_jk7we"]
[ext_resource type="Script" uid="uid://dpew2o2faip6k" path="res://test_scenes/victorious_lucian_splash/visual_comparison.gd" id="3_6mtyo"]

[sub_resource type="SystemFont" id="SystemFont_6mtyo"]
font_names = PackedStringArray("Monospace")

[node name="VisualComparison" type="Node3D" unique_id=1155957687]

[node name="SubViewportContainer" type="SubViewportContainer" parent="." unique_id=1143641616]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Viewport" type="SubViewport" parent="SubViewportContainer" unique_id=1043398115]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Reference" type="TextureRect" parent="SubViewportContainer/Viewport" unique_id=1235481503]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.25335693
offset_bottom = 0.25323486
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource("2_jk7we")
expand_mode = 5
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="Render" type="SubViewportContainer" parent="SubViewportContainer/Viewport" unique_id=1933957529]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
stretch = true
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer/Viewport/Render" unique_id=314659319]
handle_input_locally = false
msaa_3d = 2
screen_space_aa = 2
mesh_lod_threshold = 0.0
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="defaultScene" parent="SubViewportContainer/Viewport/Render/SubViewport" unique_id=1347612653 instance=ExtResource("1_jk7we")]
metadata/_edit_lock_ = true

[node name="PreviewPanel" type="Panel" parent="." unique_id=86704273]
unique_name_in_owner = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -129.0
offset_top = -2.0
offset_right = -129.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PreviewPanel" unique_id=1008253329]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Img1" type="TextureRect" parent="PreviewPanel/VBoxContainer" unique_id=570300969]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
stretch_mode = 2

[node name="Img2" type="TextureRect" parent="PreviewPanel/VBoxContainer" unique_id=1745190160]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
stretch_mode = 2

[node name="CheckButton" type="CheckButton" parent="." unique_id=1683309164]
unique_name_in_owner = true
anchors_preset = -1
anchor_right = 0.28500003
anchor_bottom = 0.32900003
offset_left = 12.0
offset_top = 9.0
offset_right = -257.32004
offset_bottom = -173.19202
tooltip_text = "toggle to switch between individual images"
action_mode = 0
button_mask = 7
keep_pressed_outside = true
text = "A"

[node name="ControlPanel" type="Panel" parent="." unique_id=2096250504 node_paths=PackedStringArray("viewport", "reference", "render", "label", "resolution_spin_box", "blur_spin_box")]
offset_left = -2.0
offset_top = 440.0
offset_right = 579.0
offset_bottom = 650.0
script = ExtResource("3_6mtyo")
viewport = NodePath("../SubViewportContainer/Viewport")
reference = NodePath("../SubViewportContainer/Viewport/Reference")
render = NodePath("../SubViewportContainer/Viewport/Render")
label = NodePath("Label")
resolution_spin_box = NodePath("ResolutionSpinBox")
blur_spin_box = NodePath("BlurSpinBox")

[node name="Label" type="RichTextLabel" parent="ControlPanel" unique_id=328337251]
layout_mode = 0
offset_left = 15.0
offset_top = 72.0
offset_right = 573.0
offset_bottom = 202.0
theme_override_constants/line_separation = 0
theme_override_constants/table_h_separation = 26
theme_override_constants/table_v_separation = 2
theme_override_fonts/mono_font = SubResource("SystemFont_6mtyo")
fit_content = true
autowrap_mode = 0
autowrap_trim_flags = 0
horizontal_alignment = 2
vertical_alignment = 1

[node name="Button" type="Button" parent="ControlPanel" unique_id=2101849920]
layout_mode = 0
offset_left = 14.0
offset_top = 16.0
offset_right = 128.0
offset_bottom = 66.0
text = "Compare
"

[node name="Timer" type="Timer" parent="ControlPanel" unique_id=1435681955]
unique_name_in_owner = true

[node name="AutoCheckBox" type="CheckBox" parent="ControlPanel" unique_id=1411619452]
unique_name_in_owner = true
layout_mode = 0
offset_left = 136.0
offset_top = 26.0
offset_right = 200.0
offset_bottom = 57.0
text = "auto"

[node name="ResolutionSpinBox" type="SpinBox" parent="ControlPanel" unique_id=329204591]
unique_name_in_owner = true
layout_mode = 0
offset_left = 308.0
offset_top = 18.0
offset_right = 394.5
offset_bottom = 63.0
min_value = 8.0
max_value = 1024.0
value = 256.0
allow_greater = true

[node name="Label2" type="Label" parent="ControlPanel/ResolutionSpinBox" unique_id=843131856]
layout_mode = 0
offset_left = -96.0
offset_top = 11.0
offset_right = -16.0
offset_bottom = 34.0
text = "resolution"

[node name="BlurSpinBox" type="SpinBox" parent="ControlPanel" unique_id=1299078760]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 327.0
offset_top = 91.0
offset_right = 464.0
offset_bottom = 136.0
max_value = 1024.0
step = 0.125
value = 8.0
allow_greater = true

[node name="Label2" type="Label" parent="ControlPanel/BlurSpinBox" unique_id=1295996979]
layout_mode = 0
offset_left = -96.0
offset_top = 11.0
offset_right = -16.0
offset_bottom = 34.0
text = "blur"

[connection signal="mouse_exited" from="CheckButton" to="ControlPanel" method="_on_check_button_mouse_exited"]
[connection signal="toggled" from="CheckButton" to="ControlPanel" method="_on_check_button_toggled"]
[connection signal="pressed" from="ControlPanel/Button" to="ControlPanel" method="_on_button_pressed"]
[connection signal="timeout" from="ControlPanel/Timer" to="ControlPanel" method="_on_timer_timeout"]
[connection signal="toggled" from="ControlPanel/AutoCheckBox" to="ControlPanel" method="_on_check_box_toggled"]
